<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    tools:context=".MainActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="110dp"
                android:layout_marginTop="10dp"
                android:layout_height="60dp"
                android:src="@drawable/icone_pet"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:text="@string/login_to_findyourpet"
                android:fontFamily="@font/amiri" />


            <androidx.cardview.widget.CardView
                android:layout_height="520dp"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="05dp"
                app:cardCornerRadius="30dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp">

                    <TextView
                        android:id="@+id/page1_maintext"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/cambria"
                        android:layout_gravity="center"
                        android:textSize="28sp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/dark_gray"
                        android:text="@string/login_in" />


                    <TextView
                        android:id="@+id/loginNotice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="center"
                        android:textColor="@color/dark_gray"
                        android:text="@string/app_description" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/loginFieldTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        app:errorEnabled="true"
                        android:hint="Username">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usernameField"
                            android:background="@color/gray2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordFieldTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:endIconMode="password_toggle"
                        android:hint="@string/password"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordField"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:ems="10"
                            android:background="@color/gray2"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingEnd="48dp"
                            tools:ignore="RtlSymmetry" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp">

                        <TextView
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:id="@+id/nouveau_compte"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/couleurs"
                            android:layout_gravity="start"
                            android:clickable="true"
                            android:minHeight="52dp"
                            android:textAllCaps="false"
                            android:selectAllOnFocus="true"
                            android:text="@string/new_account" />

                        <Button
                            android:id="@+id/loginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:textStyle="bold"
                            android:text="Login"
                            android:textColor="@color/white"
                            tools:enabled="false"
                            android:backgroundTint="@color/pink_button"
                            android:minHeight="52dp"
                            android:textAllCaps="false"
                            tools:ignore="RelativeOverlap" />




                    </FrameLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </LinearLayout>
    </androidx.core.widget.NestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>